<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/loginbg"
    tools:context="com.projectuas.songbird.RegisterActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="85dp" />

    <TextView
        android:id="@+id/registerloginpsn"
        android:layout_width="259dp"
        android:layout_height="117dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/register_msg"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:inputType="text"
        android:background="#ffffff"
        android:hint="@string/username"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:background="#FFFFFF"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/ulg_password"
        android:paddingLeft="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FF5722"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/sdh_terdaftar"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>